applications/base/unifi/unifi-network-application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: unifi
  name: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  strategy: {}
  template:
    metadata:
      labels:
        app: unifi-network-application
    spec:
      containers:
      - image: lscr.io/linuxserver/unifi-network-application:latest
        name: unifi
        ports:
          - containerPort: 8443
          - containerPort: 8080
          - containerPort: 8880
          - containerPort: 6789
          - containerPort: 3478
            protocol: UDP
          - containerPort: 10001
            protocol: UDP
          - containerPort: 1900
            protocol: UDP
          - containerPort: 5514
            protocol: UDP
status: {}
