applications/base/unifi/unifi-network-application/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: unifi
  name: unifi
  namespace: unifi
spec:
  ports:
  - port: 8443
    protocol: TCP
    targetPort: https
  selector:
    app: unifi
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
