applications/base/unifi/unifi-network-application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-unifi
  annotations:
    cert-manager.io/cluster-issuer: "cert-cluster-issuer"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - unifi.cbxon.co.uk
    secretName: cert-unifi
  rules:
  - host: unifi.cbxon.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-unifi
            port:
              number: 8443
